01-grafana-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: etcd-stress
    namespace: monitoring-stress
  spec:
    host: etcd-stress-monitoring-stress.apps.jmbquzwd.eastus.aroapp.io
    port:
      targetPort: grafana
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: grafana-a-service
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
